--- a/index.html
+++ b/index.html
@@ -25,22 +25,12 @@
     .container {
       font-size: clamp(1.5rem, 5vw, 2rem);
       max-width: 90vw;
-      width: fit-content;
-      white-space: normal;
-      text-wrap: balance;
-      overflow: hidden;
-      border-right: 0.15em solid #1A1A1A;
-      animation: typing 10s steps(70, end), blink-caret 0.75s step-end infinite;
+      opacity: 0;
+      animation: fadeIn 2s ease-out forwards;
     }
 
-    @keyframes typing {
-      from { width: 0 }
-      to { width: 100% }
-    }
-
-    @keyframes blink-caret {
-      from, to { border-color: transparent }
-      50% { border-color: #1A1A1A }
+    @keyframes fadeIn {
+      to { opacity: 1; }
     }
   </style>
 </head>
