sonria med litet s

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sonria</title>
+  <title>sonria</title>
   <link rel="icon" href="https://fav.farm/🎀" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,8 +37,7 @@
     }
 
     .rosett {
-      width: 25%;
-      max-width: 150px;
+      width: 45%;
       opacity: 0;
       animation: fadeInImage 2s ease-out forwards;
       animation-delay: 2.5s;
