--- a/index.html
+++ b/index.html
@@ -34,7 +34,33 @@
       font-size: clamp(1.5rem, 5vw, 2rem);
       opacity: 0;
       animation: fadeInText 2s ease-out forwards;
+      animation-fill-mode: forwards;
     }
 
     .rosett {
-      wi
+      width: 10em;
+      max-width: 90vw;
+      opacity: 0;
+      animation: fadeInImage 2s ease-out forwards;
+      animation-delay: 2.5s;
+      animation-fill-mode: forwards;
+    }
+
+    @keyframes fadeInText {
+      to { opacity: 1; }
+    }
+
+    @keyframes fadeInImage {
+      to { opacity: 1; }
+    }
+  </style>
+</head>
+<body>
+  <div class="wrapper">
+    <div class="container">Det mesta är omöjligt men kul att du försöker! (✿^‿^)</div>
+    <a href="https://open.spotify.com/track/2BBIUV8wIBbqc7HXObzdgH?si=60617fcd82a94dc1" target="_blank" rel="noopener">
+      <img src="rosett_2.png" alt="Rosett" class="rosett">
+    </a>
+  </div>
+</body>
+</html>
