med meta taggar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>sonria</title>
+
+  <!-- Meta-beskrivning och social delning -->
+  <meta name="description" content="Christian Andersson – digital strateg i Helsingborg.">
+  <meta property="og:title" content="sonria.se" />
+  <meta property="og:description" content="Christian Andersson – digital strateg i Helsingborg." />
+  <meta property="og:image" content="https://sonria.se/rosett_2.png" />
+  <meta property="og:url" content="https://sonria.se" />
+  <meta name="twitter:card" content="summary_large_image" />
+
   <link rel="icon" href="https://fav.farm/🎀" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,4 +64,20 @@
     }
 
     @keyframes fadeInText {
-      to {
+      to { opacity: 1; }
+    }
+
+    @keyframes fadeInImage {
+      to { opacity: 1; }
+    }
+  </style>
+</head>
+<body>
+  <div class="wrapper">
+    <div class="container">Det mesta är omöjligt men kul att du försöker! (✿^‿^)</div>
+    <a href="https://open.spotify.com/track/2BBIUV8wIBbqc7HXObzdgH?si=60617fcd82a94dc1" target="_blank" rel="noopener">
+      <img src="rosett_2.png" alt="Rosett" class="rosett">
+    </a>
+  </div>
+</body>
+</html>
