rosett och taggar

--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
   <meta name="description" content="Christian Andersson – digital strateg i Helsingborg.">
   <meta property="og:title" content="sonria.se" />
   <meta property="og:description" content="Christian Andersson – digital strateg i Helsingborg." />
-  <meta property="og:image" content="https://sonria.se/rosett_2.png" />
+  <meta property="og:image" content="https://sonriax.github.io/sonria/rosett_2.png" />
   <meta property="og:url" content="https://sonria.se" />
   <meta name="twitter:card" content="summary_large_image" />
 
+  <!-- Favicon -->
   <link rel="icon" href="https://fav.farm/🎀" type="image/x-icon">
+
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 
-  <!-- Redirect från www.sonria.se till sonria.se -->
+  <!-- Redirect från www.sonria.se -->
   <script>
     if (location.hostname === "www.sonria.se") {
       location.href = "https://sonria.se" + location.pathname + location.search + location.hash;
@@ -75,4 +78,9 @@
 <body>
   <div class="wrapper">
     <div class="container">Det mesta är omöjligt men kul att du försöker! (✿^‿^)</div>
-    <a href="https://open.spotify.com/track/2BBIUV8wIBbqc7H
+    <a href="https://open.spotify.com/track/2BBIUV8wIBbqc7HXObzdgH?si=60617fcd82a94dc1" target="_blank" rel="noopener">
+      <img src="rosett_2.png" alt="Rosett" class="rosett">
+    </a>
+  </div>
+</body>
+</html>
