--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <meta name="description" content="Christian Andersson – digital strateg i Helsingborg.">
   <meta property="og:title" content="sonria.se" />
   <meta property="og:description" content="Christian Andersson – digital strateg i Helsingborg." />
-  <meta property="og:image" content="https://sonriax.github.io/sonria/rosett_2.png" />
+  <meta property="og:image" content="https://sonria.se/og-image.png" />
   <meta property="og:url" content="https://sonria.se" />
+  <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <!-- Favicon -->
