--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <div class="container">Det mesta är omöjligt men kul att du försöker! (✿^‿^)</div>
+    <div class="container">Det mesta är omöjligt, men kul att du försöker! (✿^‿^)</div>
     <a href="https://open.spotify.com/track/2BBIUV8wIBbqc7HXObzdgH?si=60617fcd82a94dc1" target="_blank" rel="noopener">
       <img src="rosett_2.png" alt="Rosett" class="rosett">
     </a>
