--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <body>
   <div class="wrapper">
     <div class="container">Det mesta är omöjligt, men kul att du försöker! (✿^‿^)</div>
-    <a href="https://open.spotify.com/" target="_blank" rel="noopener noreferrer" aria-label="Lyssna på Spotify">
+    <a href="open.spotify.com" target="_blank" rel="noopener noreferrer" aria-label="Lyssna på Spotify">
       <img src="rosett_2.png" alt="Dekorativ rosett som länkar till Spotify" class="rosett" loading="lazy" />
     </a>
   </div>
