--- a/index.html
+++ b/index.html
@@ -93,3 +93,10 @@
     .sparkle.mouse {
       font-size: 1.2rem;
     }
+
+    .sparkle.touch {
+      font-size: 3rem;
+    }
+
+    @keyframes fadeOut {
+      0% { opacity: 1; transform: translateY(0) scal
