--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
       --primary-bg-dark: #FF69B4; /* Deep Pink */
       --primary-bg-light: #FFC0CB; /* Pink */
       --text-color: #1A1A1A; /* Very Dark Gray */
+      --form-bg: rgba(255, 255, 255, 0.8); /* Lätt genomskinlig vit för formulär */
+      --input-border: #ccc;
+      --button-bg: #FF69B4;
+      --button-text: #FFFFFF;
     }
 
     body {
@@ -75,11 +79,74 @@
       cursor: pointer;
     }
 
+    /* Formspree Form Styling */
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      width: 100%;
+      max-width: 400px; /* Begränsa formulärbredden */
+      padding: 1.5rem;
+      background-color: var(--form-bg);
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      margin-top: 2rem; /* Lite avstånd från rosetten */
+      opacity: 0;
+      animation: fadeInForm 2s ease-out forwards;
+      animation-delay: 3s; /* Animera in efter text och bild */
+    }
+
+    form label {
+      text-align: left;
+      font-weight: bold;
+      margin-bottom: 0.25rem;
+      display: block; /* Säkerställ att label är på egen rad */
+    }
+
+    form input[type="email"],
+    form textarea {
+      width: calc(100% - 20px); /* Justera för padding */
+      padding: 10px;
+      border: 1px solid var(--input-border);
+      border-radius: 4px;
+      font-family: "Quicksand", sans-serif;
+      font-size: 1rem;
+      color: var(--text-color);
+      background-color: #fff; /* Vit bakgrund för inputfälten */
+    }
+
+    form textarea {
+      resize: vertical; /* Tillåt vertikal storleksändring */
+      min-height: 100px;
+    }
+
+    form button {
+      padding: 12px 20px;
+      background-color: var(--button-bg);
+      color: var(--button-text);
+      border: none;
+      border-radius: 4px;
+      font-family: "Quicksand", sans-serif;
+      font-size: 1.1rem;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+    }
+
+    form button:hover {
+      background-color: #E65A9C; /* Mörkare rosa vid hover */
+      transform: translateY(-2px);
+    }
+
     @keyframes fadeInText {
       to { opacity: 1; }
     }
 
     @keyframes fadeInImage {
+      to { opacity: 1; }
+    }
+
+    @keyframes fadeInForm {
       to { opacity: 1; }
     }
 
@@ -111,6 +178,16 @@
     <a href="https://open.spotify.com/track/2BBIUV8wIBbqc7HXObzdgH?si=a7c3d06e36cb425b" target="_blank" rel="noopener noreferrer" aria-label="Lyssna på Spotify">
       <img src="rosett_2.png" alt="Dekorativ rosett som länkar till Spotify" class="rosett" loading="lazy" />
     </a>
+
+    <form action="https://formspree.io/f/xzzgprrj" method="POST">
+      <label for="email">Din e-post:</label>
+      <input type="email" name="email" id="email" required placeholder="ditt.namn@example.com">
+
+      <label for="message">Ditt meddelande:</label>
+      <textarea name="message" id="message" required placeholder="Skriv ditt meddelande här..."></textarea>
+
+      <button type="submit">Skicka meddelande</button>
+    </form>
   </div>
 
   <script>
