--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <form action="https://formspree.io/f/xzzgprrj" method="POST">
       <input type="email" name="email" id="email" required placeholder="ditt.namn@mail.se">
       <textarea name="message" id="message" required placeholder="Skriv snälla saker här!"></textarea>
-      <button type="submit">👋</button>
+      <button type="submit">💖</button>
     </form>
   </div>
 
